Solved the problem of not showing the Hidden Div function in menu for drinks

--- a/style.css
+++ b/style.css
@@ -565,6 +565,9 @@ nav{
 /* popup starts */
 .hidden{
     display: none;
+    position: fixed;
+    top: auto;
+    right: auto;
 }
 
 .hidden1{
